# CANoe_gRPC

./: CMakeLists.txt
proto/: file_transfer.proto
src/: application.cpp  client.cpp  file_transfer.grpc.pb.cc  file_transfer.grpc.pb.h  file_transfer.pb.cc  file_transfer.pb.h  server.cpp
